compiler/pernixc_test/src/snapshot/snapshots/snapshot__module_tree__redfinition__main.pnx.snap
---
source: compiler/pernixc_test/src/snapshot/mod.rs
expression: assert_string
---
stderr:
error: a module with the given name already exists
  ╭─ module_tree/redfinition/main.pnx:2:8
  │
1 │ public module submodule
  │        ---------------- existing module with the same name
2 │ public module submodule:
  │        ^^^^^^^^^^^^^^^^ this module redefines an existing module
  │
  = can not have more than one module with the same name in the same scope



stdout:
